--- a/equipo-12/package.json
+++ b/equipo-12/package.json
@@ -9,7 +9,10 @@
     "lint": "tsc --noEmit && eslint . --fix --max-warnings 0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@mui/material": "^5.13.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
