--- a/equipo-12/package.json
+++ b/equipo-12/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "stream-consumers": "^1.0.2",
     "yup": "^1.1.1"
   },
   "devDependencies": {
