adding password forget

--- a/equipo-12/tsconfig.json
+++ b/equipo-12/tsconfig.json
@@ -29,6 +29,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "config/nodemailer.js"
-  ],
+, "pages/api/recuperar.ts"  ],
   "exclude": ["node_modules"]
 }
