--- a/equipo-12/package.json
+++ b/equipo-12/package.json
@@ -32,13 +32,14 @@
     "react-hook-form": "^7.43.9",
     "stream-consumers": "^1.0.2",
     "ts-md5": "^1.3.1",
-    "yup": "^1.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.25",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "babel-loader": "^8.2.5",
