--- a/equipo-12/package.json
+++ b/equipo-12/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/styles": "^5.13.2",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
