--- a/equipo-12/package.json
+++ b/equipo-12/package.json
@@ -13,7 +13,6 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
     "@mdi/js": "^7.2.96",
-    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styles": "^5.13.2",
     "@types/crypto-js": "^4.1.1",
@@ -39,8 +38,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
+    "@mui/icons-material": "^5.11.16",
     "@types/react": "18.0.17",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "18.0.6",
+    "@types/react-input-mask": "^3.0.2",
     "@types/styled-components": "^5.1.25",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
