--- a/equipo-12/package.json
+++ b/equipo-12/package.json
@@ -9,6 +9,7 @@
     "lint": "tsc --noEmit && eslint . --fix --max-warnings 0"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.6.2",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
@@ -34,6 +35,7 @@
     "react-input-mask": "^2.0.4",
     "stream-consumers": "^1.0.2",
     "ts-md5": "^1.3.1",
+    "vercel": "^30.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
